<resources>
    <!---Login-->
    <string name="app_name">Caculadora de IR</string>
    <string name="edit_user">Usuário</string>
    <string name="edit_pass">Senha</string>
    <string name="btt_logar">Logar</string>

    <!---Menu Inferior-->
    <string name="title_home">Home</string>
    <string name="title_movi">Movi</string>
    <string name="title_media">Média</string>

    <!---Adiciona Movimentações-->
    <string name="add_data_op">Data</string>
    <string name="add_acoes">Ação</string>
    <string name="add_valor">Valor</string>
    <string name="add_text_cv">Compra ou Venda</string>
    <string name="add_quantidade">Quantidade</string>

    <!---RecycleMovi-->
    <string name="listaacoes">Lista de Ações</string>

    <!--RecycleMedia-->
    <string name="acoes">Acões</string>
    <string name="compra">Compra</string>
    <string name="venda">Venda</string>
    <string name="resultado">Resultado</string>
    <string name="excluir">Excluir</string>

    <!--FragmentHome-->
    <string name="custodia">Custódia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
